# opencv_micro

./: .gitignore  CMakeLists.txt  README.md
dlib/: CMakeLists.txt
dlib/include/: dlib.h
dlib/main/: face_detect.cpp  face_exchange.cpp
dlib/src/: dlib.cpp
frequency_domain_filtering/: CMakeLists.txt
frequency_domain_filtering/include/: fourier.h
frequency_domain_filtering/src/: main.cpp
imageEnhancement/: CMakeLists.txt
imageEnhancement/include/: enhance.h
imageEnhancement/src/: enhance.cpp  main.cpp
keras/: CMakeLists.txt
keras/src/: main.cpp
ocr/: CMakeLists.txt
ocr/include/: tesseract_my.h
ocr/src/: tesseract_my.cpp
parent/: CMakeLists.txt
parent/include/: general.h
parent/src/: general.cpp
parent_head/: CMakeLists.txt
parent_head/include/: general1.h
parent_head/src/: general1.cpp
traditional/: CMakeLists.txt
traditional/include/: traditional.h
traditional/src/: main.cpp  traditional.cpp
yolo/: CMakeLists.txt
yolo/include/: netconfig.h  yolo.h
yolo/src/: main.cpp  yolo.cpp
